# spacetime-trivia

./: DUMP.md  README.md  SPECS.md  TODO.md
.cursor/rules/: build_spacetime_project.mdc  check-llms-context.mdc  conventional_commits.mdc  mdc-rule-creation.mdc  rust-error-handling.mdc  rust-memory-safety.mdc  rust-performance.mdc  rust-project-structure.mdc  rust-testing.mdc  rust-type-system.mdc  update_todo_md.mdc
client/: package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/components/modals/: create-lobby-modal.tsx
client/components/screens/: agent-studio-screen.tsx  game-over-screen.tsx  landing-screen.tsx  lightning-round-screen.tsx  question-round-screen.tsx  round-result-screen.tsx  waiting-room-screen.tsx
client/components/ui-components/: answer-button.tsx  avatar-stack.tsx  chat-bubble.tsx  crowd-meter.tsx  emoji-burst.tsx  lightning-banner.tsx  timer-ring.tsx  topic-card.tsx
client/hooks/: use-mobile.tsx
server/spacetime_trivia_server/: Cargo.toml
server/spacetime_trivia_server/src/: elo.rs  lib.rs
specs/: FRONTEND.md  JTBD.md  SPECS.md
